[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iprad"
version = "0.0.3"
description = "Powerful IP checker"
authors = [
    {name = "Avsbestua", email = "widzmien333@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "python-whois>=0.8.0",
    "icmplib>=3.0.4"
]

[project.scripts]
iprad = "iprad.cli:main"

[tool.setuptools.packages.find]
where = ["src"]